--- a/index.html
+++ b/index.html
@@ -3,25 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Form</title>
+  <title>Table to Database</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 50%;
+      margin: 20px;
+    }
+
+    table, th, td {
+      border: 1px solid black;
+    }
+
+    th, td {
+      padding: 10px;
+      text-align: left;
+    }
+  </style>
 </head>
 <body>
 
-  <h2>Simple Form</h2>
+  <h2>Table to Database</h2>
 
-  <label for="firstName">First Name:</label>
-  <input type="text" id="firstName" name="firstName" required>
+  <table border="1" id="myTable">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Mugilan</td>
+        <td><input type="radio" name="status_1" value="On" data-checked="false" onclick="toggleRadio(this)"></td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Heman</td>
+        <td><input type="radio" name="status_2" value="On" data-checked="false" onclick="toggleRadio(this)"></td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Muthu</td>
+        <td><input type="radio" name="status_3" value="On" data-checked="false" onclick="toggleRadio(this)"></td>
+      </tr>
+    </tbody>
+  </table>
 
-  <br>
+  <button id="saveToDatabase">Submit</button>
 
-  <label for="lastName">Last Name:</label>
-  <input type="text" id="lastName" name="lastName" required>
-
-  <br>
-  <button id="submit">Submit</button>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js";
-    import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
+    import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCUKV9kQmnSBRiFduML9tKmnTVdGp6UJhY",
@@ -35,39 +70,76 @@
     const app = initializeApp(firebaseConfig);
     const database = getDatabase(app);
 
-    function addData() {
-      let fname = document.getElementById("firstName").value;
-      let lname = document.getElementById("lastName").value;
+    window.toggleRadio = function (radio) {
+      const isChecked = radio.getAttribute("data-checked") === "true";
+      radio.checked = !isChecked;
+      radio.setAttribute("data-checked", (!isChecked).toString());
+    };
 
-      set(ref(database, "names"), {
-        firstname: fname,
-        lastname: lname
-      }).then(() => {
-        alert("Success");
-      })
-      .catch((error) => {
-        alert("Unsuccessful");
-        console.log(error);
-      });
-    }
+    function fetchAndSetInitialState() {
+      const table = document.getElementById("myTable");
+      const rows = table.getElementsByTagName("tbody")[0].getElementsByTagName("tr");
 
-    function retData() {
-      const dbRef = ref(database, "names");
-      get(child(dbRef, "names")).then((snapshot) => {
-        if (snapshot.exists()) {
-          document.getElementById("firstName").value = snapshot.val().firstname;
-          document.getElementById("lastName").value = snapshot.val().lastname;
-        } else {
-          alert("No employee data");
+      // Fetch data from the database
+      onValue(ref(database), (snapshot) => {
+        const data = snapshot.val();
+        if (data) {
+          for (let i = 0; i < rows.length; i++) {
+            const columns = rows[i].getElementsByTagName("td");
+            const name = columns[1].textContent;
+
+            // Find the corresponding data in the fetched data
+            const userData = data[name];
+
+            if (userData) {
+              const radio = rows[i].querySelector(`input[name="status_${i + 1}"]`);
+              if (userData.status === "On") {
+                radio.checked = true;
+                radio.setAttribute("data-checked", "true");
+              } else {
+                radio.checked = false;
+                radio.setAttribute("data-checked", "false");
+              }
+            }
+          }
         }
-      })
-      .catch((error) => {
-        alert("Unsuccessful");
-        console.log(error);
       });
     }
 
-    document.getElementById("submit").addEventListener("click", addData);
+    function saveToDatabase() {
+      const table = document.getElementById("myTable");
+      const rows = table.getElementsByTagName("tbody")[0].getElementsByTagName("tr");
+
+      for (let i = 0; i < rows.length; i++) {
+        const columns = rows[i].getElementsByTagName("td");
+        const name = columns[1].textContent;
+        const rollNumber = columns[0].textContent;
+        const radio = rows[i].querySelector(`input[name="status_${i + 1}"]`);
+
+        // Check if a radio button is selected
+        const status = radio && radio.checked ? "On" : "Off";
+
+        // Create an object with the data
+        const newData = {
+          rollNumber: rollNumber,
+          status: status
+        };
+
+        // Set the data at the specified key
+        set(ref(database, name), newData).then(() => {
+          console.log(`Data for ${name} saved successfully`);
+        }).catch((error) => {
+          console.error(`Error saving data for ${name}:`, error);
+        });
+      }
+
+      alert("Successfully submitted");
+    }
+
+    // Fetch and set the initial state on page load
+    fetchAndSetInitialState();
+
+    document.getElementById("saveToDatabase").addEventListener("click", saveToDatabase);
   </script>
 </body>
 </html>
