--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </tr>
       <tr>
         <td>2</td>
-        <td>Heman</td>
+        <td>Nirainjan</td>
         <td><input type="radio" name="status_2" value="On" data-checked="false" onclick="toggleRadio(this)"></td>
       </tr>
       <tr>
